syntax = "proto3";
package roadmunk;

message FeedbackCommentedMessage {
  string feedback_comment_id = 1;
  string account_id          = 2;
  string deployment          = 3;
}
