syntax = "proto3";
package roadmunk;

message IdeaRoadmapItemAttachMessage {
  string idea_id         = 1;
  string roadmap_item_id = 2;
  string user_id         = 3;
  string account_id      = 4;
  string deployment      = 5;
}
