syntax = "proto3";
package roadmunk;

message InviteUserRequest {
	string user_id    = 1;
	string account_id = 2;
	string email      = 3;
	string deployment = 4;
}