syntax = "proto3";
package roadmunk;

message AccountDeleted {
	string deployment = 1;
	string account_id = 2;
	string requesting_user_id = 3;
}
