syntax = "proto3";
package roadmunk;

message CustomersCSVIngestionMessage {
  string file_location  = 1;
  string user_id        = 2;
  string account_id     = 3;
  string deployment     = 4;
}
