syntax = "proto3";
package roadmunk;

message ResetPasswordRequest {
  string deployment = 1;
  string email      = 2;
  string hubspotutk = 3;
  string ip         = 4;
  string page_url   = 5;
}
