syntax = "proto3";
package roadmunk;

message UserEmailUpdatedMessage {
  string id = 1;
  string account_id = 2;
  string deployment = 3;
  string email = 4;
}
