syntax = "proto3";
package roadmunk;

message UserLogout {
  string user_id         = 1;
  string account_id      = 2;
  string deployment      = 3;
}
